--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body
 
 .para
 {
-  padding-left: 25%;
-  padding-right: 25%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 /* menu/header stuff */
@@ -90,6 +90,20 @@ body
 .image-link img {
   width: 120px; /* Adjust the width of your small images */
   height: 120px;
+}
+
+.ga-link
+{
+  text-decoration: none;
+  display: inline-block;
+  line-height: 1;
+}
+.ga-link img
+{
+  width:160px;
+  height: auto;
+  justify-content: center;
+  vertical-align: 80%;
 }
 
 /* gallery */
